--- a/html basic/about.html
+++ b/html basic/about.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <h1> Bro Code</h1>
+
+    <h2> dinosaur have 1600 species </h2>
     <nav class="navbar">
       <ul> 
           <li><a href="index.html">Home</a> </li>
